--- a/radius-gitops-config.yaml
+++ b/radius-gitops-config.yaml
@@ -1,4 +1,4 @@
 config:
-  name: app.bicep
-  params: app.bicepparam
-  resourceGroup: default
+  - name: app.bicep
+    params: app.bicepparam
+    resourceGroup: default
